--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,39 @@ header {
   align-items: center;
   background-color: #cccc;
   margin-bottom: 25px;
+
+  position: fixed;
+top: 0;
+width: 80%;
+z-index: 11;
 }
 
 
 div.container{
   display: grid;
   grid-template-columns: 0.15fr 1fr;
+  margin-top: 7%;
+}
+
+footer{
+  background-color: #cccc;
+  
+}
+footer div{
+  width: 50%;
+  margin: auto;
+}
+footer ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ }
+ footer ul li{
+margin: 10px;
+ }
+
+footer p{
+  text-align: center;
+  margin: 0;
+  padding-bottom: 10px;
 }
