--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ img {
   width: 100%;
 }
 
-div.app{
+div.app {
   width: 80%;
   margin: auto;
 }
@@ -46,40 +46,43 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #cccc;
+  background-color: #cccccc;
   margin-bottom: 25px;
 
   position: fixed;
-top: 0;
-width: 80%;
-z-index: 11;
+  top: 0;
+  width: 80%;
+  z-index: 11;
 }
 
 
-div.container{
+div.container {
   display: grid;
   grid-template-columns: 0.15fr 1fr;
   margin-top: 7%;
 }
 
-footer{
+footer {
   background-color: #cccc;
-  
+
 }
-footer div{
+
+footer div {
   width: 50%;
   margin: auto;
 }
+
 footer ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
- }
- footer ul li{
-margin: 10px;
- }
+}
 
-footer p{
+footer ul li {
+  margin: 10px;
+}
+
+footer p {
   text-align: center;
   margin: 0;
   padding-bottom: 10px;
