--- a/src/App.css
+++ b/src/App.css
@@ -57,8 +57,8 @@ header {
 
 
 div.container {
-  display: grid;
-  grid-template-columns: 0.15fr 1fr;
+  /* display: grid;
+  grid-template-columns: 0.15fr 1fr; */
   margin-top: 7%;
 }
 
