--- a/src/components/ListOfProducts.css
+++ b/src/components/ListOfProducts.css
@@ -99,3 +99,13 @@ select{
     text-align: center;
     margin: 0;
   }
+
+
+  @media screen and (max-width: 768px) {
+
+  div.list-of-product{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+  }
